# clone

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE
.devcontainer/: devcontainer.json
ui/: app-window.slint
ui/modules/: topbar.slint
